# CeroClient

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
Client/: pom.xml
Client/src/com/cero/: Client.java  Main.java
Client/src/com/cero/utilities/: Logger.java
Client/src/java/com/cero/: Client.java
Client/src/java/com/cero/client/: Client.java  package-info.java
Client/src/java/com/cero/client/config/: ConfigurationManager.java
Client/src/java/com/cero/client/module/: Module.java  ModuleInterface.java  ModuleManager.java
Client/src/java/com/cero/client/module/category/: ModuleCategory.java
Client/src/java/com/cero/client/module/category/combat/: Velocity.java
Client/src/java/com/cero/client/module/settings/: ModuleSetting.java
Client/src/java/com/cero/client/module/settings/types/: RangeSetting.java  SettingType.java
Client/src/java/com/cero/client/sdk/client/: Minecraft.java
Client/src/java/com/cero/client/sdk/client/entity/: AbstractClientPlayer.java  EntityOtherPlayerMP.java  EntityPlayerSP.java
Client/src/java/com/cero/client/sdk/entity/: Entity.java  EntityLivingBase.java
Client/src/java/com/cero/client/sdk/entity/player/: EntityPlayer.java
Client/src/java/com/cero/client/sdk/util/: AxisAlignedBB.java  BlockPos.java  Timer.java  Vec3.java  Vec3i.java  Vec4b.java
Client/src/java/com/cero/client/sdk/world/: World.java
Client/src/java/com/cero/client/utilities/: ClientConstants.java  Logger.java
Client/src/java/com/cero/client/utilities/runtime/: Interface.java
Client/src/java/com/cero/client/utilities/structures/: IntRange.java  Range.java
Client/src/java/com/cero/config/: ConfigurationManager.java
Client/src/java/com/cero/module/: Module.java  ModuleInterface.java  ModuleManager.java
Client/src/java/com/cero/module/category/: ModuleCategory.java
Client/src/java/com/cero/module/category/combat/: Velocity.java
Client/src/java/com/cero/module/settings/: ModuleSetting.java
Client/src/java/com/cero/module/settings/types/: RangeSetting.java  SettingType.java
Client/src/java/com/cero/sdk/client/: Minecraft.java
Client/src/java/com/cero/sdk/client/entity/: AbstractClientPlayer.java  EntityOtherPlayerMP.java  EntityPlayerSP.java
Client/src/java/com/cero/sdk/entity/: Entity.java  EntityLivingBase.java
Client/src/java/com/cero/sdk/entity/player/: EntityPlayer.java
Client/src/java/com/cero/sdk/util/: AxisAlignedBB.java  BlockPos.java  Timer.java  Vec3.java  Vec3i.java  Vec4b.java
Client/src/java/com/cero/sdk/world/: World.java
Client/src/java/com/cero/utilities/: ClientConstants.java  Logger.java
Client/src/java/com/cero/utilities/runtime/: Interface.java
Client/src/java/com/cero/utilities/structures/: IntRange.java  Range.java
Client/src/main/java/com/cero/: Client.java
Client/src/main/java/com/cero/sdk/client/: Minecraft.java
Client/src/main/java/com/cero/sdk/entity/: Player.java
Client/src/main/java/com/cero/sdk/world/: World.java
Client/src/main/java/com/cero/utilities/: Logger.java
Client/src/main/java/com/cero/utilities/runtime/: Interface.java  RuntimeField.java
ClientInjector/: CMakeLists.txt
ClientInjector/include/: ClientInjector.h
ClientInjector/include/argparse/: argparse.h
ClientInjector/include/macOS/: injector.h  mach_inject.h  private.h
ClientInjector/include/macOS/lookup/: mh_functions.h  mh_util.h
ClientInjector/include/macOS/mip-mini/: inject.h
ClientInjector/include/macOS/remoteExec/: remoteExec.h
ClientInjector/include/shared/: injector.h
ClientInjector/include/windows/: injector.h
ClientInjector/mip-mini/: Makefile
ClientInjector/mip-mini/injector/inject/: inject.c
ClientInjector/mip-mini/injector/payloads/: injected.h
ClientInjector/src/: ClientInjector.cpp
ClientInjector/src/macOS/: injector.cpp  mach_inject.c
ClientInjector/src/macOS/payloads/: payload.arm64e.c  payload.x86_64.c
ClientInjector/src/shared/: Injector.cpp
ClientInjector/src/windows/: injector.cpp
ClientLoader/: CMakeLists.txt
ClientLoader/include/: ClientLoader.h  library.h
ClientLoader/include/entry/: macos.h
ClientLoader/src/: ClientLoader.cpp  entry.cpp  library.cpp
ClientLoader/src/entry/: macOS.cpp  windows.cpp
shared/include/: commons.h  constants.h  logger.h
shared/include/zip/: miniz.h
shared/src/: commons.cpp  zip.cpp
